# vise-logger

./: README.md  pyproject.toml
docs/: modelcontextprotocol.io_llms-relevant.txt  product_requirements_doc.md
tests/: test_integration_search_stages.py  test_integration_upload_to_webapp.py  test_integration_zip_creation.py  test_search_stages.py
vise_logger/: locations.json  main.py  privacy.py  search.py
